fix bug filter dropdown when keyboard navigation, change z-index of lightbox to keep it on top layer

--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     display: none;
-    z-index: 5;
+    z-index: 10;
     background: var(--color-white);
     transition: opacity 0.3s ease-in-out;
 }
