--- a/css/photographer.css
+++ b/css/photographer.css
@@ -94,7 +94,7 @@
 }
 
 .dropdown {
-    z-index: 10;
+    z-index: 5;
     position: absolute;
     border-radius: 5px;
     overflow: hidden;
